# astrotilt

./: LICENSE.txt  README.md  pyproject.toml
sample_fits/: synthetic_0000.fits  synthetic_0001.fits  synthetic_0002.fits
sample_xisf/: synthetic_0000.xisf  synthetic_0001.xisf  synthetic_0002.xisf
scripts/: make_samples.py
src/astrotilt/: analyze.py  stars.py
